--- a/ORSProject-04/src/main/resources/in/co/rays/proj4/bundle/system.properties
+++ b/ORSProject-04/src/main/resources/in/co/rays/proj4/bundle/system.properties
@@ -3,8 +3,10 @@ error.email={0} Email ID is invalid
 error.multipleFields={0} and {1} are required.
 
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/project04
-#url=jdbc:mysql://mysql:3306/project04
+
+url.local=jdbc:mysql://localhost:3306/project04
+url.docker=jdbc:mysql://mysql:3306/project04
+
 username=root
 password=root
 initialpoolsize=5
@@ -13,7 +15,7 @@ acquireincrement=5
 
 page.size=10
 
-#Email Server Parameters
+# Email Server Parameters
 smtp.server=smtp.gmail.com
 smtp.port=465
 email.login=rishabh.sde.1@gmail.com
