--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 mysql-data/
 ORSProject-04/mysql-data/
 *.sock
+
+# Eclipse
+.metadata/
+.project
+.classpath
+.settings/
+
+# Maven / Build
+target/
+*.class
+
+# Tomcat / Server
+**/tmp*/
+**/work/
+**/logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+
